# log-parser

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: log_parsing_benchmark.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: error.rs  log_entry.rs  mod.rs  stream.rs
src/filters/: composite.rs  level.rs  mod.rs  regex_filter.rs  time.rs
src/output/: csv.rs  json.rs  mod.rs  stats.rs  text.rs
src/parsers/: mod.rs  text.rs
src/ui/: mod.rs  tui.rs
tests/integration/: cli_tests.rs
