[package]
name = "log-parser"
version = "0.1.0"
edition = "2021"
authors = ["Developer <dev@example.com>"]
description = "高性能ログファイル解析・フィルタリングCLIツール"
readme = "README.md"
license = "MIT"
keywords = ["log", "parser", "filter", "cli", "analysis"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# Text processing
regex = "1.10"
rayon = "1.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File I/O and monitoring
memmap2 = "0.9"
notify = "6.1"

# Terminal UI
ratatui = "0.24"
crossterm = "0.27"

# Logging
env_logger = "0.11"
log = "0.4"

# Output formatting
colored = "2.1"
tabled = "0.14"

# Performance monitoring
indicatif = "0.17"

# Configuration
toml = "0.8"
directories = "5.0"

# Async runtime (for real-time features)
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "log_parsing_benchmark"
harness = false

[[bin]]
name = "log-parser"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["tui", "real-time"]
tui = ["ratatui", "crossterm"]
real-time = ["notify", "tokio"]
web-ui = []